# lox

./: .gitignore  Cargo.toml  README.md
.cargo/: config
.github/workflows/: rust.yml
components/lox-compile/: Cargo.toml
components/lox-db/: Cargo.toml
components/lox-db/src/: lib.rs
components/lox-error-format/: Cargo.toml
components/lox-execute/: Cargo.toml
components/lox-execute/src/: execute.rs  kernel.rs  lib.rs  vm.rs
components/lox-ir/: Cargo.toml
components/lox-lang/: Cargo.toml
components/lox-lex/: Cargo.toml
components/lox-parse/: Cargo.toml
components/lox-parse/src/: file_parser.rs  lib.rs  parser.rs  prelude.rs  tests.rs  token_test.rs  tokens.rs
components/lox-parse/test_data/: binary_op.lox  binary_op.syntax  comparison.lox  comparison.syntax  equality.lox  equality.syntax  hello_world.lox  hello_world.syntax  parenthized.lox  parenthized.syntax
components/lox-web/: Cargo.toml  index.js  netlify.sh  package-lock.json  package.json  style.css  webpack.config.js
components/lox-web/js/: index.js
components/lox-web/src/: lib.rs
components/salsa/: Cargo.toml
lox_tests/: and.lox  arithmetic.bytecode  arithmetic.execute  arithmetic.lox  arithmetic.output  arithmetic.syntax  arithmetic.token  assignment.lox  boolean.bytecode  boolean.execute  boolean.lox  boolean.output  boolean.syntax  boolean.token  closure.lox  closure2.lox  closure3.lox  closure4.lox  comparison.bytecode  comparison.execute  comparison.lox  comparison.syntax  comparison.token  equality.bytecode  equality.execute  equality.lox  equality.syntax  equality.token  fib.lox  func.lox  if.lox  local_var.lox  local_var_assign.lox  print.token  string.bytecode  string.execute  string.lox  string.syntax  string.token  var.lox  (+1 more)
lox_tests/and/: bytecode  execute  syntax  token
lox_tests/arithmetic/: bytecode  execute  output  syntax  token
lox_tests/assignment/: bytecode  execute  syntax  token
lox_tests/boolean/: bytecode  execute  output  syntax  token
lox_tests/closure/: bytecode  execute  syntax  token
lox_tests/closure2/: bytecode  execute  syntax  token
lox_tests/closure3/: bytecode  execute  syntax  token
lox_tests/closure4/: bytecode  execute  syntax  token
lox_tests/comparison/: bytecode  execute  output  token
lox_tests/diagnostics/: error_in_function.lox
lox_tests/equality/: bytecode  execute  output  syntax  token
lox_tests/fib/: bytecode  execute  syntax  token
lox_tests/for/: bytecode  diagnostic  execute  syntax  token
lox_tests/func/: bytecode  diagnostic  execute  output  syntax  token
lox_tests/if/: bytecode  execute  syntax  token
lox_tests/local_var/: bytecode  execute  syntax  token
lox_tests/local_var_assign/: bytecode  execute  syntax  token
lox_tests/or/: bytecode  execute  syntax  token
lox_tests/print/: bytecode  execute  syntax  token
lox_tests/string/: bytecode  execute  token
src/: main.rs
(+34 files in other folders)
