[workspace]
members = [".", "components/*"]

[package]
name = "lox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
expect-test = "1.4.1"
salsa = { path="components/salsa" }
lox-ir = { path="components/lox-ir" }
lox-parse = { path="components/lox-parse" }
lox-lex = { path="components/lox-lex" }
lox-compile = { path="components/lox-compile" }
lox-execute = { path="components/lox-execute" }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
clap = { version = "4.4.4", features = ["derive"] }
