[package]
name = "lox-execute"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
salsa = { path="../salsa" }
lox-ir = { path="../lox-ir" }
lox-compile = { path="../lox-compile" }
tracing = "0.1.37"
generational-arena = "0.2.9"
