[package]
name = "lox-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
wasm-bindgen = "0.2.88"
lox-execute = { path = "../lox-execute" }
lox-compile = { path = "../lox-compile" }
lox-parse = { path = "../lox-parse" }
lox-error-format = { path = "../lox-error-format" }
lox-db = { path = "../lox-db" }
lox-ir = { path = "../lox-ir" }
salsa = { path = "../salsa" }